--- a/public/index.html
+++ b/public/index.html
@@ -83,7 +83,7 @@
       <input type="checkbox" id="step2">
       <label for="step2">2. Server Deploys</label>
       <span class="status" id="status2">Not Checked</span>
-      <div class="note">Run 'vercel --prod' and check deployment in Vercel dashboard.</div>
+      <div class="note">Push to GitHub; check Vercel dashboard for deployment success.</div>
     </div>
     <div class="item">
       <input type="checkbox" id="step3">
